# ExcelifAI

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
rag_utils/: rag_chain.py  summarizer.py
